# libtas-movie

./: .gitignore  Cargo.toml  README.md
src/: config.rs  inputs.rs  lib.rs  load.rs  movie.rs
tests/: io.rs  load.rs
tests/movies/: 221769_Trapped_5.ltm  221769_Trapped_5_config.ini  221769_Trapped_5_inputs
